<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/accountsFragment"
        android:icon="@drawable/account"
        android:title="@string/nav_accounts" />
    <item
        android:id="@+id/peopleFragment"
        android:icon="@drawable/people"
        android:title="@string/nav_people" />
    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/transaction"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_reports"
        android:title="@string/nav_reports" />
</menu>
